--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
      <input type="text" value="username" 
      name="pison" id ="username" readonly><br><br>
      <input type="text" value="username" 
-     name="pison" id ="name"  disabled><br><br> 
+     name="pison" id ="name" disabled><br><br> 
+     <input type="text" value="username" 
+     name="pison" maxlength="5" size="5"><br><br> 
      <input type="password">
+    
 </body>
 </html>
