--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-     <h1>Html form Input element</h1>
-     <input type="text" value="username" 
-     name="pison" id ="username" readonly><br><br>
-     <input type="text" value="username" 
-     name="pison" id ="name" disabled><br><br> 
-     <input type="text" value="username" 
-     name="pison" maxlength="5" size="5"><br><br> 
-     <input type="password">
-    
-</body>
+  <body>
+    <h1>HTML Form Input Element</h1>
+    <form>
+      User Name: <input type="text" name="username" placeholder="Write user name" required><br>
+      First Name: <input type="text" name="first_name" value="piso " id="firstname" readonly><br>
+      Last Name: <input type="text" name="last_name" value="Tesfammichael" id="lastname" disabled><br>
+      Middle Name: <input type="text" name="middle_name" value="Gebremeskel " id="middlename" size="100"><br>
+      City Name: <input type="text" name="city_name" value="" id="cityname" size="100" autofocus><br>
+      Address: <input type="text" name="address_name" value="" id="addressname" size="100" maxlength="10"><br>
+      Number: <input type="number" name="address_name" value="" id="addressname1" min="9" max="20" step="3"><br>
+      File: <input type="file" name="address_name" value="" id="addressname2" multiple><br>
+      Image: <img src="img.png" width="40px" height="100px"><br>
+      <input type="submit">
+    </form>
+  </body>
 </html>
