--- a/button.html
+++ b/button.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Html Button</h1>
+    <fieldset>
+        <legend>Personal:</legend>
+       <h1>Html Button</h1>
     <form>
         <input type="text" name="Username"
          placeholder="user Name"/> <br>
@@ -16,5 +18,6 @@
          <input type="button"  value="Delete Data"/> 
          <input type="button"  value="Update Data"/> 
     </form>
+    </fieldset>
 </body>
 </html>
